--- a/SimpleComputer/Views/FeedPage.xaml
+++ b/SimpleComputer/Views/FeedPage.xaml
@@ -3,12 +3,14 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SimpleComputer.Views"
-	xmlns:prism="using:Prism.Windows.Mvvm"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	prism:ViewModelLocator.AutoWireViewModel="True"
-    mc:Ignorable="d">
+    xmlns:converters="using:SimpleComputer.Converters"
+	xmlns:prism="using:Prism.Windows.Mvvm"
+    prism:ViewModelLocator.AutoWireViewModel="True"
+    mc:Ignorable="d" Background="Black" x:Name="Page">
 	<Page.Resources>
+		<converters:DateTimeToStringConverter x:Key="DateTimeToStringConverter"/>
 		<Style TargetType="Button">
 			<Setter Property="Width" Value="200"/>
 		</Style>
@@ -18,23 +20,63 @@
 			<ColumnDefinition Width="auto"/>
 			<ColumnDefinition Width="*"/>
 		</Grid.ColumnDefinitions>
-		<StackPanel Grid.Column="0"  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-			<TextBlock Text="Feed" FontSize="36"/>
-			<Button Content="Show Web" Command="{Binding WebCommand}"/>
-			<Button Content="Upload Image" Command="{Binding UploadCommand}"/>
-			<Button Content="Refresh Pict List" Command="{Binding RefreshCommand}"/>
+		<StackPanel Grid.Column="0"  Background="Black">
+			<TextBlock Text="Feed" FontSize="36" Foreground="White"/>
+			<Button Content="Show Web" Command="{Binding WebCommand}" Background="Gray"/>
+			<Button Content="Upload Image" Command="{Binding UploadCommand}" Background="Gray"/>
+			<Button Content="Refresh Pict List" Command="{Binding RefreshCommand}" Background="Gray"/>
 		</StackPanel>
-		<ScrollViewer Grid.Column="1" HorizontalScrollMode="Disabled" VerticalScrollMode="Auto">
-			<ItemsControl ItemsSource="{Binding Picts}">
+
+		<Grid Grid.Column="1">
+			<Grid.RowDefinitions>
+				<RowDefinition Height="*"/>
+				<RowDefinition Height="auto"/>
+			</Grid.RowDefinitions>
+			<Border Grid.Row="0" CornerRadius="5" Background="Gray" Margin="20,10" Padding="20">
+				<Grid>
+					<Grid.RowDefinitions>
+						<RowDefinition Height="Auto"/>
+						<RowDefinition Height="*"/>
+						<RowDefinition Height="Auto"/>
+					</Grid.RowDefinitions>
+					<TextBlock Grid.Row="0" Text="{Binding CurrentPost.Title}" FontSize="24" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+					<TextBlock Grid.Row="0" Text="{Binding CurrentPost.PostDate, Converter={StaticResource DateTimeToStringConverter}}" FontSize="12" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5,4,5,0"/>
+					<Border Grid.Row="1" CornerRadius="10" Margin="10">
+						<Image Source="{Binding CurrentPost.ImagePath}" />
+						<!--<ScrollViewer ZoomMode="Enabled" MinZoomFactor="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+						<Image Source="{Binding CurrentPost.ImagePath}" MaxWidth="{Binding ActualWidth, ElementName=Page}" MaxHeight="{Binding ActualHeight, ElementName=Page}"/>
+					</ScrollViewer>-->
+					</Border>
+					<TextBlock Grid.Row="2" Text="{Binding CurrentPost.Content}" TextWrapping="Wrap" HorizontalAlignment="Center"/>
+				</Grid>
+			</Border>
+			<StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
+				<Button Content="&lt;-- Previous" FontSize="48" FontWeight="Bold" Command="{Binding PreviousCommand}" Background="Gray" Width="350" Margin="0,10,20,10"/>
+				<Button Content="Next --&gt;" FontSize="48" FontWeight="Bold" Command="{Binding NextCommand}" Background="Gray" Width="350"/>
+			</StackPanel>
+		</Grid>
+		<!--<ScrollViewer Grid.Column="1" HorizontalScrollMode="Disabled" VerticalScrollMode="Auto">
+			<ItemsControl ItemsSource="{Binding Posts}">
 				<ItemsControl.ItemTemplate>
 					<DataTemplate>
-						<StackPanel>
-							<Image Source="{Binding Uri}"/>
-							<TextBlock Text="{Binding Name}"/>
-						</StackPanel>
+						<Border CornerRadius="5" Background="Gray" Margin="20,10" Padding="20">
+							<Grid>
+								<Grid.RowDefinitions>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+								</Grid.RowDefinitions>
+								<TextBlock Grid.Row="0" Text="{Binding Title}" FontSize="24" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+								<TextBlock Grid.Row="0" Text="{Binding PostDate, Converter={StaticResource DateTimeToStringConverter}}" FontSize="12" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5,4,5,0"/>
+								<Border Grid.Row="1" CornerRadius="10" Margin="10">
+									<Image Source="{Binding ImagePath}" HorizontalAlignment="Center"/>
+								</Border>
+								<TextBlock Grid.Row="2" Text="{Binding Content}" TextWrapping="Wrap" HorizontalAlignment="Center"/>
+							</Grid>
+						</Border>
 					</DataTemplate>
 				</ItemsControl.ItemTemplate>
 			</ItemsControl>
-		</ScrollViewer>
+		</ScrollViewer>-->
 	</Grid>
 </Page>
