--- a/SimpleComputer/Shell.xaml
+++ b/SimpleComputer/Shell.xaml
@@ -5,7 +5,7 @@
     xmlns:local="using:SimpleComputer"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d" x:Name="ShellPage" Background="Black">
+    mc:Ignorable="d" x:Name="ShellPage">
 	<Page.Resources>
 		<Style TargetType="Button">
 			<Setter Property="Width" Value="100"/>
